analysis who - correlation

--- a/raw/collect.ipynb
+++ b/raw/collect.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,11 +19,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "starting download of: annual_aqi__by_county.csv\n",
+      "Downloading... Done!\n",
+      "starting download of: daily_aqi__by_county.csv\n",
+      "Downloading... Done!\n",
+      "starting download of: Air_Quality_Measures_on_the_National_Environmental_Health_Tracking_Network.csv\n",
+      "Downloading... Done!\n",
+      "starting download of: data-who-attributable-death-rate-air-pollutants-other-version.csv\n",
+      "Downloading... Done!\n",
+      "starting download of: data-who-attributable-death-rate-air-pollutants.csv\n",
+      "Downloading... Done!\n",
+      "starting download of: who-air-pollutants-db.csv\n",
+      "Downloading... Done!\n",
+      "starting download of: Daily_PM2.5_Concentrations_All_County__2001-2016.csv\n",
+      "Downloading... Done!\n"
+     ]
+    }
+   ],
    "source": [
     "for gdrive_file in gdrive.gdrive_dic:\n",
+    "    print(f'starting download of: {gdrive_file[1]}')\n",
     "    gdrive_id, file = gdrive_file[0], gdrive_file[1]\n",
     "    fetch_and_cache_gdrive(gdrive_id, file, data_dir=\"data\", force=False)"
    ]
@@ -55,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
