--- a/link_gas_emitters_pm25.ipynb
+++ b/link_gas_emitters_pm25.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "(219928, 4)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -123,19 +123,19 @@
        "Name: V_GHG_EMITTER_GAS.GAS_CODE, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "facilities_df['V_GHG_EMITTER_GAS.GAS_CODE'].value_counts()\n",
-    "# 'V_GHG_EMITTER_GAS.GAS_NAME' doesn't provide additionnal classes\n"
+    "# 'V_GHG_EMITTER_GAS.GAS_NAME' doesn't provide additionnal classes and explanations\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -406,6 +406,8 @@
     "\n",
     "\n",
     "\n",
+    "TOREMOVE:\n",
+    "\n",
     "Tried to use: air_qual_df = pd.read_csv('./raw/data/us_air_quality_measures.csv')\n",
     "-> shitty dataset\n"
    ]
@@ -419,9 +421,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['year', 'date', 'statefips', 'countyfips', 'PM25_max_pred',\n",
+      "       'PM25_med_pred', 'PM25_mean_pred', 'PM25_pop_pred'],\n",
+      "      dtype='object')\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -443,142 +454,100 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>MeasureId</th>\n",
-       "      <th>MeasureName</th>\n",
-       "      <th>MeasureType</th>\n",
-       "      <th>StratificationLevel</th>\n",
-       "      <th>StateFips</th>\n",
-       "      <th>StateName</th>\n",
-       "      <th>CountyFips</th>\n",
-       "      <th>CountyName</th>\n",
-       "      <th>ReportYear</th>\n",
-       "      <th>Value</th>\n",
-       "      <th>Unit</th>\n",
-       "      <th>UnitName</th>\n",
-       "      <th>DataOrigin</th>\n",
-       "      <th>MonitorOnly</th>\n",
+       "      <th>year</th>\n",
+       "      <th>date</th>\n",
+       "      <th>statefips</th>\n",
+       "      <th>countyfips</th>\n",
+       "      <th>PM25_max_pred</th>\n",
+       "      <th>PM25_med_pred</th>\n",
+       "      <th>PM25_mean_pred</th>\n",
+       "      <th>PM25_pop_pred</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>83</td>\n",
-       "      <td>Number of days with maximum 8-hour average ozo...</td>\n",
-       "      <td>Counts</td>\n",
-       "      <td>State x County</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>01JAN2001</td>\n",
        "      <td>1</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>1027</td>\n",
-       "      <td>Clay</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>No Units</td>\n",
-       "      <td>No Units</td>\n",
-       "      <td>Monitor Only</td>\n",
        "      <td>1</td>\n",
+       "      <td>10.664367</td>\n",
+       "      <td>10.264546</td>\n",
+       "      <td>10.137631</td>\n",
+       "      <td>10.188703</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>83</td>\n",
-       "      <td>Number of days with maximum 8-hour average ozo...</td>\n",
-       "      <td>Counts</td>\n",
-       "      <td>State x County</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>01JAN2001</td>\n",
        "      <td>1</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>1051</td>\n",
-       "      <td>Elmore</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>No Units</td>\n",
-       "      <td>No Units</td>\n",
-       "      <td>Monitor Only</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9.803209</td>\n",
+       "      <td>8.739505</td>\n",
+       "      <td>8.743748</td>\n",
+       "      <td>8.811486</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>83</td>\n",
-       "      <td>Number of days with maximum 8-hour average ozo...</td>\n",
-       "      <td>Counts</td>\n",
-       "      <td>State x County</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>01JAN2001</td>\n",
        "      <td>1</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>1073</td>\n",
-       "      <td>Jefferson</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>No Units</td>\n",
-       "      <td>No Units</td>\n",
-       "      <td>Monitor Only</td>\n",
-       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12.087599</td>\n",
+       "      <td>11.809159</td>\n",
+       "      <td>11.812775</td>\n",
+       "      <td>11.802062</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>83</td>\n",
-       "      <td>Number of days with maximum 8-hour average ozo...</td>\n",
-       "      <td>Counts</td>\n",
-       "      <td>State x County</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>01JAN2001</td>\n",
        "      <td>1</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>1079</td>\n",
-       "      <td>Lawrence</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>No Units</td>\n",
-       "      <td>No Units</td>\n",
-       "      <td>Monitor Only</td>\n",
-       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8.579425</td>\n",
+       "      <td>8.435394</td>\n",
+       "      <td>8.458118</td>\n",
+       "      <td>8.448871</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>83</td>\n",
-       "      <td>Number of days with maximum 8-hour average ozo...</td>\n",
-       "      <td>Counts</td>\n",
-       "      <td>State x County</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>01JAN2001</td>\n",
        "      <td>1</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>1089</td>\n",
-       "      <td>Madison</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>No Units</td>\n",
-       "      <td>No Units</td>\n",
-       "      <td>Monitor Only</td>\n",
-       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>14.399446</td>\n",
+       "      <td>13.577741</td>\n",
+       "      <td>13.300528</td>\n",
+       "      <td>13.231461</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   MeasureId                                        MeasureName MeasureType  \\\n",
-       "0         83  Number of days with maximum 8-hour average ozo...      Counts   \n",
-       "1         83  Number of days with maximum 8-hour average ozo...      Counts   \n",
-       "2         83  Number of days with maximum 8-hour average ozo...      Counts   \n",
-       "3         83  Number of days with maximum 8-hour average ozo...      Counts   \n",
-       "4         83  Number of days with maximum 8-hour average ozo...      Counts   \n",
+       "   year       date  statefips  countyfips  PM25_max_pred  PM25_med_pred  \\\n",
+       "0  2001  01JAN2001          1           1      10.664367      10.264546   \n",
+       "1  2001  01JAN2001          1           3       9.803209       8.739505   \n",
+       "2  2001  01JAN2001          1           5      12.087599      11.809159   \n",
+       "3  2001  01JAN2001          1           7       8.579425       8.435394   \n",
+       "4  2001  01JAN2001          1           9      14.399446      13.577741   \n",
        "\n",
-       "  StratificationLevel  StateFips StateName  CountyFips CountyName  ReportYear  \\\n",
-       "0      State x County          1   Alabama        1027       Clay        1999   \n",
-       "1      State x County          1   Alabama        1051     Elmore        1999   \n",
-       "2      State x County          1   Alabama        1073  Jefferson        1999   \n",
-       "3      State x County          1   Alabama        1079   Lawrence        1999   \n",
-       "4      State x County          1   Alabama        1089    Madison        1999   \n",
-       "\n",
-       "   Value      Unit  UnitName    DataOrigin  MonitorOnly  \n",
-       "0   33.0  No Units  No Units  Monitor Only            1  \n",
-       "1    5.0  No Units  No Units  Monitor Only            1  \n",
-       "2   39.0  No Units  No Units  Monitor Only            1  \n",
-       "3   28.0  No Units  No Units  Monitor Only            1  \n",
-       "4   31.0  No Units  No Units  Monitor Only            1  "
+       "   PM25_mean_pred  PM25_pop_pred  \n",
+       "0       10.137631      10.188703  \n",
+       "1        8.743748       8.811486  \n",
+       "2       11.812775      11.802062  \n",
+       "3        8.458118       8.448871  \n",
+       "4       13.300528      13.231461  "
       ]
      },
-     "execution_count": 54,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "\n"
+    "daily_pm25_concentrations = pd.read_csv('./raw/data/Daily_PM2.5_Concentrations_All_County__2001-2016.csv')\n",
+    "print(daily_pm25_concentrations.columns)\n",
+    "display(daily_pm25_concentrations.head(5))"
    ]
   },
   {
