end correlatin industry and pm25

--- a/TODO
+++ b/TODO
@@ -9,8 +9,11 @@ AQI vs PM25
 - correlation possible?
 
 Gas emitters link
-- add and process PM25 data US
+#- add and process PM25 data US
 - joining tables
+    -> change the index
+    -> Explains why taking this index
+    -> join tables
 - correlations analysis and visualisations
 - model predictions
 
