--- a/link_gas_emitters_pm25.ipynb
+++ b/link_gas_emitters_pm25.ipynb
@@ -2308,7 +2308,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The prediction doesn't work, as the correlation is not strong enough."
+   ]
   }
  ],
  "metadata": {
