--- a/link_gas_emitters_pm25.ipynb
+++ b/link_gas_emitters_pm25.ipynb
@@ -2309,7 +2309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The prediction doesn't work, as the correlation is not strong enough."
+    "The prediction doesn't work, as the correlation is not strong enough. We will consider other potential sources for PM2.5 pollution, as the traffic volume."
    ]
   }
  ],
