--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@ WHO death rates
 - improving the total/both case log-log correlation
 
 AQI vs PM25
-- correlation possible?
+- correlation possible? -> seems like no
 
 Gas emitters link
 #- add and process PM25 data US
