--- a/relating_aqi_pm25.ipynb
+++ b/relating_aqi_pm25.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gdrive_refs as names\n",
+    "import raw.gdrive_refs as names\n",
     "import pandas as pd\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
